--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 header {
     background-color: #333;
     padding: 10px;
-    color: white;
+    color: black;
     text-align: center;
 }
 
